[gd_scene load_steps=5 format=2]

[ext_resource path="res://DialogManager/Dialog UI/UIcontroller.gd" type="Script" id=1]
[ext_resource path="res://Test/Portraits/Dx8jRDzX4AEpFel.png" type="Texture" id=2]
[ext_resource path="res://Test/Portraits/DxclxW9V4AA2-zv.png" type="Texture" id=3]
[ext_resource path="res://Test/Portraits/boobsgames-1023225566688956416-20180728_171600-img1.jpg" type="Texture" id=4]

[node name="DialogUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.07437
margin_right = 3.07434
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortraitContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 0.503
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftPortrait" type="TextureRect" parent="PortraitContainer"]
margin_left = 68.0
margin_right = 268.0
margin_bottom = 301.0
grow_horizontal = 2
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 6
texture = ExtResource( 4 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterPortrait" type="TextureRect" parent="PortraitContainer"]
margin_left = 411.0
margin_right = 611.0
margin_bottom = 301.0
grow_horizontal = 2
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 6
texture = ExtResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightPortrait" type="TextureRect" parent="PortraitContainer"]
margin_left = 754.0
margin_right = 954.0
margin_bottom = 301.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 6
texture = ExtResource( 2 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SayPanel" type="Panel" parent="."]
anchor_left = 0.1
anchor_top = 0.531
anchor_right = 0.9
anchor_bottom = 0.908
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SayText" type="RichTextLabel" parent="SayPanel"]
anchor_left = 0.02
anchor_top = 0.2
anchor_right = 0.975
anchor_bottom = 0.833
bbcode_enabled = true

[node name="NameText" type="RichTextLabel" parent="SayPanel"]
anchor_left = 0.021
anchor_right = 0.138
anchor_bottom = 0.11
margin_right = -1.52588e-05
margin_bottom = -1.90735e-06
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="Button" parent="SayPanel"]
anchor_left = 0.75
anchor_top = 0.8
anchor_right = 0.9
anchor_bottom = 0.83
margin_right = 12.0
margin_bottom = 20.0
text = "NEXT"

[node name="VBoxChoiceContainer" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.25
anchor_top = 0.05
anchor_right = 0.75
anchor_bottom = 0.488
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}
